# AUS-CMake

aus/: CMakeLists.txt
aus/cli/: CMakeLists.txt  main.cpp
aus/complexities/: CMakeLists.txt
aus/libds/: CMakeLists.txt
aus/tests/: CMakeLists.txt
aus/tests/amt/: amt.test.h
aus/tests/mm/: compact_memory_manager.test.h  mm.test.h
